<resources>
    <string name="app_name">Marvel Characters App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="search_for_character">Search for characters</string>
    <string name="cancel">Cancel</string>
    <string name="name_title">Name</string>
    <string name="des_title">Description</string>
    <string name="comics">Comics</string>
    <string name="stories">Stories</string>
    <string name="series">Series</string>
    <string name="events">Events</string>
</resources>