<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".ui.details.DetailsFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="character"
            type="com.project.marvelcharactersapp.ui.features.characters.data.model.Character" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:fitsSystemWindows="true">


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/character_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@{character.name}"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/marvel_logo" />

                <ImageView
                    android:id="@+id/back_btn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:elevation="3dp"
                    android:src="@drawable/ic_back_arrow"
                    android:layout_margin="12dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    app:layout_constraintTop_toBottomOf="@id/character_img">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_title"
                        android:textColor="@color/red"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="@{character.name}"
                        android:textAppearance="?attr/textAppearanceHeadline5"
                        android:textColor="@android:color/white"
                        tools:text="@string/name_title" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/des_title"
                        android:textColor="@color/red"
                        android:textSize="18sp"
                        tools:text="@string/des_title" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingHorizontal="16dp"
                        android:text="@{character.description}"
                        android:textAppearance="?attr/textAppearanceBodyMedium"
                        android:textColor="@color/white"
                        tools:text="Description" />

                    <LinearLayout
                        android:id="@+id/comics_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="vertical"
                        android:visibility="@{character.comics == null || character.comics.items.empty?View.GONE:View.VISIBLE}">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/comics"
                            android:textColor="@color/red"
                            android:textSize="18sp" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/comics_recycler_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            tools:itemCount="1"
                            tools:listitem="@layout/artwork_item" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/series_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="vertical"
                        android:visibility="@{character.series == null || character.series.items.empty?View.GONE:View.VISIBLE}">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/series"
                            android:textColor="@color/red"
                            android:textSize="18sp" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/series_recycler_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            tools:itemCount="1"
                            tools:listitem="@layout/artwork_item" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/stories_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="vertical"
                        android:visibility="@{character.stories == null || character.stories.items.empty?View.GONE:View.VISIBLE}">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/stories"
                            android:textColor="@color/red"
                            android:textSize="18sp" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/stories_recycler_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            tools:itemCount="1"
                            tools:listitem="@layout/artwork_item" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/events_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="vertical"
                        android:visibility="@{character.events == null || character.events.items.empty?View.GONE:View.VISIBLE}">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/events"
                            android:textColor="@color/red"
                            android:textSize="18sp" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/events_recycler_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            tools:itemCount="1"
                            tools:listitem="@layout/artwork_item" />
                    </LinearLayout>


                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>